HTML investigative study almost done

--- a/HTML/06multimedia_and_aria.html
+++ b/HTML/06multimedia_and_aria.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Media and Aria</title>
-</head>
-<body>
+  </head>
+  <body>
+    <h1>Media</h1>
     <figure>
-        <figcaption></figcaption>
+      <img src="img/watch.JPG" width="300" alt="" />
+      <figcaption>This is aesthetic watch.</figcaption>
     </figure>
-</body>
+
+    <img src="img/watch.JPG" width="200px" alt="" />
+    <p>This is aesthetic watch.</p>
+
+    <figure>
+        <video src="img/Darhi k fayedy.mp4" width="200" controls
+        controlslist="nofullscreen nodownload noremoteplayback noplaybackrate"
+        ></video>
+    </figure>
+
+    
+  </body>
 </html>
