--- a/CSS_section/Navbar_project_with_Pseudo_element/index.html
+++ b/CSS_section/Navbar_project_with_Pseudo_element/index.html
@@ -5,15 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        html , body{
-            height: 100%;
-            width: 100%;
-        }
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      html,
+      body {
+        height: 100%;
+        width: 100%;
+      }
+
+      ul li {
+        list-style: none;
+      }
+
+      nav {
+        background-color: rgb(107, 105, 107);
+        padding: 10px 20px;
+      }
+
+      ul {
+        display: flex;
+        justify-content: space-between;
+        margin: 0;
+        padding: 0;
+      }
+
+      nav a {
+        text-decoration: none;
+        color: white;
+        position: relative;
+        padding: 5px 10px;
+      }
+
+      .login-btn {
+        background-color: rgb(61, 61, 61);
+        padding: 3px;
+        cursor: pointer;
+        border-radius: 5px;
+        color: #fff;
+      }
+      
+      nav a::after{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        left: 0;
+        bottom: 0;
+        background-color: #bbbbbb;
+        transform: scaleX(0);
+        transition: transform 0.3s ease-in-out;
+      }
+
+      nav a:hover::after{
+        transform: scaleX(1);
+      }
+
     </style>
   </head>
   <body>
