--- a/CSS_section/Grid_layout/grid_Master.html
+++ b/CSS_section/Grid_layout/grid_Master.html
@@ -9,6 +9,8 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+        font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
       }
       html,
       body {
@@ -30,6 +32,7 @@
         margin: 20px;
         padding: 5px;
         border-radius: 10px;
+        color: white;
       }
 
       .box {
@@ -48,7 +51,14 @@
   <body>
     <div class="container">
       <h2>1. Basic Grid (3x3)</h2>
-      <div class="grid-container">
+      <div
+        class="grid-container"
+        style="
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
+          grid-template-rows: repeat(3, 100px);
+        "
+      >
         <div class="box">1</div>
         <div class="box">2</div>
         <div class="box">3</div>
@@ -57,68 +67,73 @@
         <div class="box">6</div>
         <div class="box">7</div>
         <div class="box">8</div>
-        <div class="box">9</div>
       </div>
     </div>
     <div class="container">
       <h2>2. Grid with Different Column Sizes</h2>
-      <div class="grid-container">
+      <div
+        class="grid-container"
+        style="
+          display: grid;
+          grid-template-columns: 1fr 2fr 1fr;
+          grid-template-rows: repeat(1, 100px);
+        "
+      >
         <div class="box">1</div>
         <div class="box">2</div>
         <div class="box">3</div>
-        <div class="box">4</div>
-        <div class="box">5</div>
-        <div class="box">6</div>
-        <div class="box">7</div>
-        <div class="box">8</div>
-        <div class="box">9</div>
       </div>
     </div>
     <div class="container">
       <h2>3. Grid with Gaps</h2>
-      <div class="grid-container">
+      <div
+        class="grid-container"
+        style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 20px"
+      >
         <div class="box">1</div>
         <div class="box">2</div>
         <div class="box">3</div>
         <div class="box">4</div>
-        <div class="box">5</div>
-        <div class="box">6</div>
-        <div class="box">7</div>
-        <div class="box">8</div>
-        <div class="box">9</div>
       </div>
     </div>
     <div class="container">
       <h2>4. Grid Item Placement</h2>
-      <div class="grid-container">
-        <div class="box">1</div>
+      <div
+        class="grid-container"
+        style="display: grid; grid-template-columns: repeat(3, 1fr)"
+      >
+        <div class="box" style="grid-column: 1/3; grid-row: 1/3">1</div>
         <div class="box">2</div>
         <div class="box">3</div>
         <div class="box">4</div>
-        <div class="box">5</div>
+        <div class="box" style="grid-column: 2/3">5</div>
         <div class="box">6</div>
-        <div class="box">7</div>
-        <div class="box">8</div>
-        <div class="box">9</div>
       </div>
     </div>
     <div class="container">
       <h2>5. Grid Template Areas</h2>
-      <div class="grid-container">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-        <div class="box">5</div>
-        <div class="box">6</div>
-        <div class="box">7</div>
-        <div class="box">8</div>
-        <div class="box">9</div>
+      <div
+        class="grid-container"
+        style="
+          display: grid;
+          grid-template-areas: 'header header header' 'sidebar main main' 'footer footer footer';
+        "
+      >
+        <div class="box" style="grid-area: header">Header</div>
+        <div class="box" style="grid-area: sidebar">Sidebar</div>
+        <div class="box" style="grid-area: main">Main Content</div>
+        <div class="box" style="grid-area: footer">Footer</div>
       </div>
     </div>
     <div class="container">
       <h2>6. Auto-Fit and Minmax</h2>
-      <div class="grid-container">
+      <div
+        class="grid-container"
+        style="
+          display: grid;
+          grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        "
+      >
         <div class="box">1</div>
         <div class="box">2</div>
         <div class="box">3</div>
@@ -132,44 +147,52 @@
     </div>
     <div class="container">
       <h2>7. Alignment and Justification</h2>
-      <div class="grid-container">
+      <div
+        class="grid-container"
+        style="
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
+          height: 100px;
+          align-items: center;
+        "
+      >
         <div class="box">1</div>
         <div class="box">2</div>
         <div class="box">3</div>
-        <div class="box">4</div>
-        <div class="box">5</div>
-        <div class="box">6</div>
-        <div class="box">7</div>
-        <div class="box">8</div>
-        <div class="box">9</div>
       </div>
     </div>
     <div class="container">
       <h2>8. Nested Grids</h2>
-      <div class="grid-container">
+      <div
+        class="grid-container"
+        style="display: grid; grid-template-columns: 1fr 1fr"
+      >
         <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-        <div class="box">5</div>
-        <div class="box">6</div>
-        <div class="box">7</div>
-        <div class="box">8</div>
-        <div class="box">9</div>
+        <div
+          class="grid-container"
+          style="
+            background-color: rgb(216, 255, 255);
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+          "
+        >
+          <div class="box" style="background-color: lightgreen">2.1</div>
+          <div class="box" style="background-color: lightgreen">2.2</div>
+          <div class="box" style="background-color: lightgreen">2.3</div>
+          <div class="box" style="background-color: lightgreen">2.4</div>
+        </div>
       </div>
     </div>
     <div class="container">
       <h2>9. Grid with Auto Rows</h2>
-      <div class="grid-container">
+      <div class="grid-container" style="display: grid; grid-template-columns: repeat(3, 1fr);">
         <div class="box">1</div>
         <div class="box">2</div>
         <div class="box">3</div>
         <div class="box">4</div>
         <div class="box">5</div>
-        <div class="box">6</div>
-        <div class="box">7</div>
-        <div class="box">8</div>
-        <div class="box">9</div>
+        <div class="box" style="padding: 10px;">6 Lorem ipsum dolor sit.</div>
+        
       </div>
     </div>
   </body>
