--- a/CSS_section/Assignment_projects/index2.html
+++ b/CSS_section/Assignment_projects/index2.html
@@ -4,38 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body style="background-color: darkslategray">
     <main>
       <nav>
         <header>
-          <span
-            ><span> <img src="" alt="Logo" /></span
-          ></span>
-          <span><a href="">Home</a></span>
-          <span><a href="">Product</a></span>
-          <span><a href="">Solutions</a> </span>
-          <span><a href="">About</a></span>
-          <span><a href="">Pricing</a></span>
-          <span><button class="login" type="submit">Log in</button></span>
-          <span
-            ><button class="get-stareted" type="submit">
-              Get Started
-            </button></span
-          >
+          <div class="logo">
+            <span class="logo"> <img src="" alt="Logo" /></span>
+          </div>
+          <div class="nav-links">
+            <span><a class="main-nav" href="">Home</a></span>
+            <span><a class="main-nav" href="">Product</a></span>
+            <span><a class="main-nav" href="">Solutions</a> </span>
+            <span><a class="main-nav" href="">About</a></span>
+            <span><a class="main-nav" href="">Pricing</a></span>
+          </div>
+          <div class="btns">
+            <span class="btns"
+              ><button class="login" type="submit">Log in</button></span
+            >
+            <span class="btns"
+              ><button class="get-started" type="submit">
+                Get Started
+              </button></span
+            >
+          </div>
         </header>
         <div class="about-us">
           <h2>About Us</h2>
+          <!-- <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4> -->
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe
             reprehenderit similique, velit corporis blanditiis fuga alias
-            aliquam cupiditate enim debitis eum reiciendis est cum dolor
-            voluptatibus molestias vitae suscipit. Aliquid.
+            aliquam cupiditate enim debitis.
           </p>
         </div>
       </nav>
     </main>
-    <section class="">
+    <section class="section-our-mission">
       <div>
         <div>
           <h1>Our Mission</h1>
@@ -49,10 +56,19 @@
             voluptate, dolorum quod in, expedita quam quos nam officiis iure.
           </p>
         </div>
-        <div>
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
+        <div class="section-our-mission-imgDiv">
+          <img
+            src="https://images.pexels.com/photos/8899970/pexels-photo-8899970.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="img"
+          />
+          <img
+            src="https://images.pexels.com/photos/8899970/pexels-photo-8899970.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="img"
+          />
+          <img
+            src="https://images.pexels.com/photos/8899970/pexels-photo-8899970.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt="img"
+          />
         </div>
       </div>
     </section>
