some css remain

--- a/CSS_section/Assignment_projects/index2.html
+++ b/CSS_section/Assignment_projects/index2.html
@@ -43,66 +43,75 @@
       </nav>
     </main>
     <section class="section-our-mission">
-      <div>
-        <div>
+      <div class="img-and-text">
+        <div class="section-our-mission-text">
           <h1>Our Mission</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Repudiandae tempora voluptates eos distinctio ipsam eum quod, sed
             aliquid quos fugit eius aliquam doloremque accusantium nesciunt
             eveniet, dolores autem aperiam blanditiis rerum placeat officiis
-            obcaecati! Minima eum at accusamus nulla? Temporibus similique
-            dignissimos vel nihil enim, impedit quia? Minus rerum repellendus
-            voluptate, dolorum quod in, expedita quam quos nam officiis iure.
+            obcaecati! Minima eum at accusamus nulla? Temporibus similique.
           </p>
         </div>
         <div class="section-our-mission-imgDiv">
           <img
+            class="image1"
             src="https://images.pexels.com/photos/8899970/pexels-photo-8899970.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt="img"
           />
           <img
+            class="image2"
             src="https://images.pexels.com/photos/8899970/pexels-photo-8899970.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt="img"
           />
           <img
+            class="image3"
             src="https://images.pexels.com/photos/8899970/pexels-photo-8899970.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
             alt="img"
           />
         </div>
       </div>
     </section>
-    <section class="">
+    <section class="section-Meet-Our-Leaders">
       <div>
         <h2>Meet Our Leaders</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis
           fugit sapiente doloribus culpa unde. Animi.
         </p>
-        <div>
+        <div class="section-Meet-Our-Leaders-img-div">
           <span
-            ><img src="" alt="" />
+            ><img
+              src="https://images.pexels.com/photos/17049832/pexels-photo-17049832/free-photo-of-elegant-man-in-armchair.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt="" />
             <h4>Jonathan</h4>
             <p>CEO</p>
             <a href="https://www.linkedin.com"><img src="" alt="" /></a
             ><a href="https://www.twitter.com"><img src="" alt="" /></a
           ></span>
           <span
-            ><img src="" alt="" />
+            ><img
+              src="https://images.pexels.com/photos/13801615/pexels-photo-13801615.jpeg?auto=compress&cs=tinysrgb&w=400"
+              alt="" />
             <h4>Warner</h4>
             <p>CEO</p>
             <a href="https://www.linkedin.com"><img src="" alt="" /></a
             ><a href="https://www.twitter.com"><img src="" alt="" /></a
           ></span>
           <span
-            ><img src="" alt="" />
+            ><img
+              src="https://images.pexels.com/photos/19239672/pexels-photo-19239672/free-photo-of-studio-shot-of-an-elegant-man-in-a-suit.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt="" />
             <h4>Tammy</h4>
             <p>CEO</p>
             <a href="https://www.linkedin.com"><img src="" alt="" /></a
             ><a href="https://www.twitter.com"><img src="" alt="" /></a
           ></span>
           <span
-            ><img src="" alt="" />
+            ><img
+              src="https://images.pexels.com/photos/5717546/pexels-photo-5717546.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt="" />
             <h4>David</h4>
             <p>CEO</p>
             <a href="https://www.linkedin.com"><img src="" alt="" /></a
